[gd_scene load_steps=17 format=2]

[ext_resource path="res://GridGame/GridGame.gd" type="Script" id=1]
[ext_resource path="res://GridGame/TurnController.gd" type="Script" id=2]
[ext_resource path="res://Asset/d1.png" type="Texture" id=3]
[ext_resource path="res://Asset/d2.png" type="Texture" id=4]
[ext_resource path="res://Asset/d4.png" type="Texture" id=5]
[ext_resource path="res://GridGame/GridPoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/black_background.jpg" type="Texture" id=7]
[ext_resource path="res://Asset/8-BIT WONDER.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://GridGame/bottom_panel.gd" type="Script" id=9]

[sub_resource type="TileSet" id=1]
0/name = "d1.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "d2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "d4.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.305882, 0.294118, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.356863, 0.356863, 0.356863, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Asset/8-BIT WONDER.TTF"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0.0784314, 0.537255, 0.788235, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.156863, 0.14902, 0.188235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.262745, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="GridGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="board_pos" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0 )

[node name="board" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -120, -120 )
z_as_relative = false

[node name="GridPoint" parent="board" instance=ExtResource( 6 )]
position = Vector2( 407.207, 343.715 )

[node name="GridPoint2" parent="board" instance=ExtResource( 6 )]
position = Vector2( 471.207, 343.715 )

[node name="GridPoint3" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.207, 343.715 )

[node name="GridPoint4" parent="board" instance=ExtResource( 6 )]
position = Vector2( 598.551, 344.865 )

[node name="GridPoint5" parent="board" instance=ExtResource( 6 )]
position = Vector2( 407.658, 407.715 )

[node name="GridPoint6" parent="board" instance=ExtResource( 6 )]
position = Vector2( 472.356, 407.715 )

[node name="GridPoint7" parent="board" instance=ExtResource( 6 )]
position = Vector2( 534.304, 407.468 )

[node name="GridPoint8" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.003, 408.166 )

[node name="GridPoint9" parent="board" instance=ExtResource( 6 )]
position = Vector2( 408.356, 472.095 )

[node name="GridPoint10" parent="board" instance=ExtResource( 6 )]
position = Vector2( 473.055, 472.095 )

[node name="GridPoint11" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.003, 472.095 )

[node name="GridPoint12" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.25, 470.698 )

[node name="GridPoint13" parent="board" instance=ExtResource( 6 )]
position = Vector2( 408.356, 534.19 )

[node name="GridPoint14" parent="board" instance=ExtResource( 6 )]
position = Vector2( 473.055, 534.19 )

[node name="GridPoint15" parent="board" instance=ExtResource( 6 )]
position = Vector2( 535.905, 534.19 )

[node name="GridPoint16" parent="board" instance=ExtResource( 6 )]
position = Vector2( 599.25, 534.19 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( -0.347168, -0.606506 )
scale = Vector2( 1.3332, 1.33585 )
texture = ExtResource( 7 )
centered = false

[node name="Interface" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="upper_panel" type="Panel" parent="Interface"]
editor/display_folded = true
margin_right = 800.0
margin_bottom = 130.0
custom_styles/panel = SubResource( 2 )

[node name="my_score" type="Label" parent="Interface/upper_panel"]
margin_left = 20.0
margin_top = 80.0
margin_right = 138.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 4 )
text = "Score"
valign = 1

[node name="timeText" type="Label" parent="Interface/upper_panel"]
margin_left = 670.0
margin_top = 80.0
margin_right = 788.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 4 )
text = "timer"
valign = 1

[node name="turnButton" type="Button" parent="Interface/upper_panel"]
margin_left = 320.0
margin_top = 70.0
margin_right = 466.0
margin_bottom = 111.0
text = "end turn"

[node name="my_name" type="Label" parent="Interface/upper_panel"]
margin_left = 20.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 5 )

[node name="bottom_panel" type="Panel" parent="Interface"]
margin_top = 580.0
margin_right = 800.0
margin_bottom = 800.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 9 )

[node name="chat_display" type="TextEdit" parent="Interface/bottom_panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 170.0
custom_styles/read_only = SubResource( 7 )
readonly = true
show_line_numbers = true
wrap_enabled = true

[node name="chat_input" type="LineEdit" parent="Interface/bottom_panel"]
margin_left = 20.0
margin_top = 180.0
margin_right = 780.0
margin_bottom = 204.0
[connection signal="pressed" from="Interface/upper_panel/turnButton" to="." method="_on_turnButton_pressed"]
